crates/math-core/tests/snapshots/error_test__spaces_in_env_name.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{  pmatrix   } x \\\\ y \\end{pmatrix}"
---
Error: Unknown environment "  pmatrix   ".
   ╭─[ <input>:1:7 ]
   │
 1 │ \begin{  pmatrix   } x \\ y \end{pmatrix}
   │       ───────┬──────  
   │              ╰──────── unknown environment
───╯
